[tool.poetry]
name = "doteki"
version = "0.0.3"  # Managed by 'release' script.
description = "Easily add dynamic content to your GitHub profile"
authors = ["Óscar Fernández <osc@osc.garden>"]
license = "GPL-3.0-or-later"
homepage = "https://doteki.org/"
repository = "https://github.com/welpo/doteki"
documentation = "https://doteki.org/docs/"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
doteki = "doteki.cli:main"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
types-requests = "*"

[tool.poetry.dependencies]
python = "^3.11"
# Optional dependencies for plugins.
feedparser = { version = "^6.0", optional = true }
requests = { version = "^2.28", optional = true }


[tool.poetry.extras]
# Plugin dependencies.
all = [ # This enables `pip install doteki[all]`. Should contain all dependencies below.
    "requests",
    "feedparser",
]
lastfm = ["requests"]
feed = ["requests", "feedparser"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true
